--- a/web/src/main/webapp/css/40_transition2.html
+++ b/web/src/main/webapp/css/40_transition2.html
@@ -23,7 +23,15 @@
 #shape div {
 	width: 100px;
 	height: 100px;
-	background: url();
+	background: url(/web/css/images/f1.png);
+	position: relative;
+	left: 0;
+	transition: all 3s;
+}
+
+#shape:hover div {
+	background: url(/web/css/images/f2.png);
+	left: 600px;	
 }
 </style>
 </head>
