--- a/web/src/main/webapp/css/28_layout2.html
+++ b/web/src/main/webapp/css/28_layout2.html
@@ -10,8 +10,8 @@ ul li {
 	margin: 20px;
 	
 	/* display : 박스모델 배치 관련 스타일 속성 */
-	/* 속성값 : none(미배치), block(블럭 레벨 배치), inline(인라인 레벨 배치 - 폭과 높이 지정 불가능)
-	, inline-block(인라인 레벨 배치 - 폭과 높이 지정 가능), table, table-row, table-cell 등  */
+	/* 속성값 : none(미배치), block(블럭 레벨 배치), inline(인라인 레벨 배치 - 크기 지정 불가능)
+	, inline-block(인라인 레벨 배치 - 크기 지정 가능), table, table-row, table-cell 등  */
 	display: inline; /* margin 적용 불가능 */
 	display: inline-block; /* margin 적용 가능 */
 }	
