--- a/web/src/main/webapp/css/41_animate.html
+++ b/web/src/main/webapp/css/41_animate.html
@@ -24,7 +24,7 @@
 	animation-iteration-count: infinite;
 	
 	/* animation-direction : 박스모델에 적용될 애니메이션의 진행방향을 속성값으로 설정 */
-	/* 속성값 : normar(정방향 - 기본), reverse(역방향), alternate(정방향 > 역방향), alternate-reverse(역방향 > 정방향) */
+	/* 속성값 : normal(정방향 - 기본), reverse(역방향), alternate(정방향 > 역방향), alternate-reverse(역방향 > 정방향) */
 	animation-direction: alternate;
 }
 
