--- a/web/src/main/webapp/js/06_control.html
+++ b/web/src/main/webapp/js/06_control.html
@@ -2,9 +2,71 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>JavaScript</title>
 </head>
 <body>
+	<h1>자바스트립트 제어문</h1>
+	<hr>
+	<!-- 제어문 : 프로그램의 흐름을 변화 시키기 위해 사용하는 명령 -->
+	<p>선택문 - if, switch</p>
+	<p>반복문 - for, while</p>
+	<p>기타 - break, continue</p>
+	
+	<script type="text/javascript">
+	/*
+	//입력창을 사용하여 숫자값을 입력받아 숫자값에 대한 제곱근을 계산하여 출력	
+	// => 사용자 입력값이 숫자값이 아닌 경우 에러 메세지 출력
 
+	//prompt(message[, value]) : 입력창을 제공하여 값을 입력받아 문자값으로 반환하는 함수
+	// => 입력값이 없는 경우 [null] 반환
+	var num=prompt("숫자값을 입력해 주세요.");
+	//alert("num 변수의 자료형 = "+typeof(num));
+
+	//isNaN(value) : 매개변수로 전달받은 값을 숫자값으로 형변환 가능하면 [false]를 반환하고
+	//숫자값으로 형변환 불가능하면 [true]를 반환하는 함수
+	if(isNaN(num)) {
+		alert("입력값이 숫자가 아닙니다.");
+	} else {
+		alert(num*num);//* 연산자에 의해 문자값이 숫자값으로 자동 형변환되어 연산 처리
+	}
+	*/
+	
+	/*
+	//학생 성적에 대한 총점과 평균, 학점을 계산하여 출력
+	// => 학점 - 100~90 : A, 89~80 : B, 79~70 : C, 69~60 : D, 59~0 : F 	
+	var kor=98, eng=80, mat=91;//학생 성적
+	
+	var tot=kor+eng+mat;
+	var ave=tot/3;
+	
+	var grade="";
+	//parseInt(value) : 매개변수로 전달받은 값을 정수값으로 변환하여 반환하는 함수
+	switch(parseInt(ave/10)) {
+		case 10:
+		case 9: grade="A"; break;
+		case 8: grade="B"; break;
+		case 7: grade="C"; break;
+		case 6: grade="D"; break;
+		default: grade="F"; break;
+	}
+	
+	alert("총점 = "+tot+", 평균 = "+ave+", 학점 = "+grade);
+	*/
+	</script>	
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
