--- a/web/src/main/webapp/js/06_control.html
+++ b/web/src/main/webapp/js/06_control.html
@@ -52,21 +52,36 @@
 	
 	alert("총점 = "+tot+", 평균 = "+ave+", 학점 = "+grade);
 	*/
+	
+	/*
+	//1~100 범위의 정수값들의 합계를 계산하여 출력
+	var tot=0;
+	for(i=1;i<=100;i++) {
+		tot+=i;
+	}
+	alert("1~100 범위의 정수들의 합계 = "+tot);
+	*/
+	
+	/*
+	//A4 용지를 반으로 계속 접어 펼쳤을 경우 사각형 모양이 500개 이상이 되려면 몇 번 접으면
+	//되는지 계산하여 출력
+	var cnt=0, gae=1;
+	while(true) {
+		cnt++;
+		gae*=2;
+		if(gae>=500) break;
+	}
+	
+	alert(cnt+"번 접으면 "+gae+"개의 사각형 모양이 만들어집니다.");
+	*/
+	
+	//1~10 범위의 정수들 중 홀수만 출력
+	var result="";
+	for(i=1;i<=10;i++) {
+		if(i%2==0) continue;
+		result+=i+" ";//변수에 문자값을 추가하여 저장
+	}
+	alert("1~10 범위의 정수들 중 홀수 = "+result);
 	</script>	
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
