--- a/web/src/main/webapp/js/02_variable1.html
+++ b/web/src/main/webapp/js/02_variable1.html
@@ -32,7 +32,7 @@
 	
 	/*
 	//자바스크립트에서 문자값은 '' 또는 "" 기호를 사용하여 표현
-	var num="10";//변수에 문자값 저장 - 변수의 자료형 : string
+	var num='10';//변수에 문자값 저장 - 변수의 자료형 : string
 	alert("num = "+num);
 	*/
 
