--- a/web/src/main/webapp/js/03_variable2.html
+++ b/web/src/main/webapp/js/03_variable2.html
@@ -50,7 +50,7 @@
 		//alert("num1 = "+num1+", num2 = "+num2+", num3 = "+num3);
 	}
 	
-	//let 변수와 const 변수는 블럭이 종료되면 소멸되므로 변수를 사용할 경우 에러 발생
+	//let 변수와 const 변수는 제어문의 블럭이 종료되면 소멸되므로 변수를 사용할 경우 에러 발생
 	alert("num1 = "+num1+", num2 = "+num2+", num3 = "+num3);//에러 발생
 	*/
 	
@@ -67,7 +67,7 @@
 	}
 	
 	display();//함수 호출 - 함수 내부에 작성된 명령 실행
-	alert("num1 = "+num1+", num2 = "+num2+", num3 = "+num3);
+	alert("num1 = "+num1+", num2 = "+num2+", num3 = "+num3);//에러 발생
 	*/
 	
 	
