--- a/web/src/main/webapp/js/07_function.html
+++ b/web/src/main/webapp/js/07_function.html
@@ -22,10 +22,10 @@
 	function display() {
 		alert("선언함수의 명령 실행");
 	}	
-	//alert(display);//함수명으로 출력 처리 - 함수명으로 저장된 선언함수 출력
+	//alert(display);//함수명 출력 - 함수명으로 저장된 선언함수 출력
 	//alert(typeof(display));//function
 	
-	//선언함수는 함수명을 이용하여 함수 호출 - 함수를 반복적으로 호출 가능
+	//선언함수는 함수명을 이용하여 함수를 반복적으로 호출 가능
 	//형식) 함수명(값, 값, ...)
 	//display();//함수 호출 - 함수 내부에 작성된 명령 실행	
 	//display();
@@ -47,10 +47,10 @@
 		alert("익명함수의 명령 실행");
 	}
 	
-	//alert(display);//함수변수를 출력 처리 - 변수에 저장된 익명함수 출력
+	//alert(display);//함수변수 출력 - 변수에 저장된 익명함수 출력
 	//alert(typeof(display));//function
 	
-	//함수변수를 사용하여 함수변수에 저장된 함수 호출 가능
+	//함수변수의 변수명을 사용하여 함수변수에 저장된 함수 호출 가능
 	// => 함수변수는 함수명과 동일한 역활 실행 - 함수변수를 사용하여 함수 반복 호출 가능
 	//형식) 함수변수(값, 값, ...)
 	//display();
@@ -80,7 +80,7 @@
 	
 	/*
 	//선언함수를 선언하여 변수에 저장 가능하지만 함수명으로 함수 호출 불가능
-	// => 함수변수를 사용하여 선언함수 호출 가능
+	// => 함수변수의 변수명을 사용하여 선언함수 호출 가능
 	var display=function println() {
 		alert("함수 내부의 명령 실행");
 	}
