--- a/web/src/main/webapp/js/09_argument.html
+++ b/web/src/main/webapp/js/09_argument.html
@@ -33,8 +33,9 @@
 		//alert("total 함수의 명령 실행");
 		
 		//arguments 객체 : 함수 호출시 전달된 모든 값을 배열 형식으로 저장하기 위한 내장객체
+		// => 모든 전달값을 arguments 객체의 요소(Element)로 저장 
 		//alert(arguments);//[object Arguments]
-		//alert(arguments.length);//전달값의 갯수를 제공받아 출력
+		//alert(arguments.length);//전달값의 갯수(요소의 갯수)를 제공받아 출력
 		
 		var tot=0;
 		for(i=0;i<arguments.length;i++) {
