--- a/web/src/main/webapp/js/03_variable2.html
+++ b/web/src/main/webapp/js/03_variable2.html
@@ -70,23 +70,13 @@
 	alert("num1 = "+num1+", num2 = "+num2+", num3 = "+num3);//에러 발생
 	*/
 	
-	
+	let num=100;
+	//alert("num = "+num);
+	//ES6에서는 문자값을 ``(백틱) 기호를 사용하여 표현 가능
+	//alert(`num = `+num);
+
+	//백틱 기호를 사용하여 작성된 문자값에서는 ${변수명} 형식으로 변수값을 제공받아 사용 가능
+	alert(`num = ${num}`);
 	</script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
