--- a/web/src/main/webapp/js/12_callback.html
+++ b/web/src/main/webapp/js/12_callback.html
@@ -37,7 +37,7 @@
 	//display(display1);//함수 호출시 매개변수에 함수명으로 선언함수를 전달
 	//display(display2);//함수 호출시 매개변수에 함수변수로로 익명함수를 전달
 	
-	//함수 호출시 매개변수에 익명함수를 선언하여 전달하여 함수 내부에서 호출 가능
+	//함수 호출시 익명함수를 선언하여 매개변수에 전달해 함수 내부에서 호출 가능
 	/*
 	display(function() {
 		alert("익명함수의 명령 실행");
