--- a/web/src/main/webapp/js/15_encode.html
+++ b/web/src/main/webapp/js/15_encode.html
@@ -16,6 +16,7 @@
 	<!-- 부호화(Encoding) : URI 주소로 사용 불가능한 문자를 사용 가능한 문자(Unicode)로 변환 -->
  	<p>encodeURI(string) 함수 또는 encodeURIComponent(string) 함수 : 매개변수로 전달받은
 	일반 문자값을 부호화된 문자값으로 변환하여 반환하는 함수</p>
+	<!-- 복호화(Decoding) : 부호화 처리된 문자를 일반 문자로 변환 -->
 	<p>decodeURI(string) 함수 또는 decodeURIComponent(string) 함수 : 매개변수로 전달받은
 	부호화 처리된 문자값을 복호화 처리하여 일반 문자값으로 반환하는 함수</p>
 	
