--- a/web/src/main/webapp/js/23_Array.html
+++ b/web/src/main/webapp/js/23_Array.html
@@ -85,23 +85,25 @@
 	});
 	*/
 	
+	//alert(array);
 	
+	//Array.push(value) : Array 객체의 마지막 위치에 요소를 추가하여 요소값을 저장하는 메소드
+	array.push(40);	
+	//alert(array);//10,20,30,40
+	
+	//Array.pop() : Array 객체의 마지막 위치에 요소를 삭제하고 삭제된 요소의 값을 반환하는 메소드
+	var value=array.pop();	
+	//alert(array);//10,20,30
+	//alert(value);//40
+	
+	//Array.unshift(value) : Array 객체의 첫번째 위치에 요소를 추가하여 요소값을 저장하는 메소드
+	array.unshift(50);
+	//alert(array);//50,10,20,30
+
+	//Array.shift() : Array 객체의 첫번째 위치에 요소를 삭제하고 삭제된 요소의 값을 반환하는 메소드
+	var value=array.shift();
+	//alert(array);//10,20,30
+	alert(value);//50
 	</script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
