--- a/web/src/main/webapp/js/23_Array.html
+++ b/web/src/main/webapp/js/23_Array.html
@@ -8,7 +8,7 @@
 	<h1>Array 클래스 함수</h1>
 	<hr>
 	<p>다수의 값을 요소에 저장할 객체를 생성하기 위한 클래스 함수 
-		- Array 객체로 프로퍼티와 메소드 사용 가능</p>
+		- Array 객체(클래스 함수)로 프로퍼티와 메소드 사용 가능</p>
 	
 	<script type="text/javascript">
 	/*	
