--- a/web/src/main/webapp/js/25_Number.html
+++ b/web/src/main/webapp/js/25_Number.html
@@ -11,6 +11,11 @@
 		- Number 객체(클래스 함수)로 프로퍼티와 메소드 사용 가능</p>
 	
 	<script type="text/javascript">
+	/*	
+	var num=100;
+	alert("변수의 자료형 = "+typeof(num));//변수의 자료형 = number
+	*/
+		
 	/*
 	//매개변수로 전달받은 숫자값이 저장된 Number 객체를 생성하여 변수에 저장
 	//var num=new Number(100);		
