--- a/web/src/main/webapp/js/27_Date.html
+++ b/web/src/main/webapp/js/27_Date.html
@@ -2,9 +2,42 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>JavaScript</title>
 </head>
 <body>
-
+	<h1>Date 클래스 함수</h1>
+	<hr>
+	<p>날짜와 시간이 저장된 객체를 생성하기 위한 클래스 함수 
+		- Date 객체(클래스 함수)로 프로퍼티와 메소드 사용 가능</p>
+		
+	<script type="text/javascript">
+	//클라이언트 플렛폼(OS)의 현재 날짜와 시간이 저장된 Date 객체에 변수에 저장	
+	var now=new Date();		
+	
+	//Date.toString() : Date 객체에 저장된 날짜와 시간을 문자값으로 변환하여 반환하는 메소드
+	//alert("now.toString() = "+now.toString());
+	//alert("now = "+now);//toString() 메소드 자동 호출
+	
+	//Date.toLocaleString() : Date 객체에 저장된 날짜와 시간을 클라이언트 플렛폼(OS)의 지역에
+	//맞는 날짜와 시간 패턴의 문자값으로 변환하여 반환하는 메소드
+	//alert("now.toLocaleString() = "+now.toLocaleString());
+	
+	/*
+	//Date.getXXX() : Date 객체에 저장된 날짜와 시간 중 원하는 값을 반환하는 메소드
+	var day=["일","월","화","수","목","금","토"];
+	var today=now.getFullYear()+"년 "+(now.getMonth()+1)+"월 "
+		+now.getDate()+"일 "+day[now.getDay()]+"요일";
+	alert("today = "+today);
+	*/
+	
+	//매개변수에 날짜와 시간을 전달하여 Date 객체 생성 가능
+	var birthday=new Date(2000, 0, 1);//2000년 1월 1일 0시 0시 0초
+	
+	//Date.getTime() : Date 객체에 저장된 날짜와 시간을 초단위 숫자값(TimeStamp)으로 변환하여
+	//반환하는 메소드
+	var intervalDay=(now.getTime()-birthday.getTime())/(1000*60*60*24);
+	//alert("당신은 오늘까지 "+intervalDay+"일 살았습니다."); 
+	alert("당신은 오늘까지 "+Math.ceil(intervalDay)+"일 살았습니다."); 
+	</script>	
 </body>
 </html>
