--- a/web/src/main/webapp/js/22_Object.html
+++ b/web/src/main/webapp/js/22_Object.html
@@ -9,7 +9,8 @@
 	<hr>
 	<p>프로퍼티 및 메소드가 하나도 선언되어 있지 않은 클래스 함수로 프로퍼티 또는 메소드가
  	없는 객체를 생성할 때 사용 - 클래스 함수(클래스)를 작성할 때 제공하는 자료형</p>
-	<p>생성된 Object 객체에 필요한 프로퍼티 또는 메소드를 추가하여 사용 - 객체를 하나만 생성할 때 사용</p>
+	<p>Object 객체에 필요한 프로퍼티 또는 메소드는 추가하여 사용 
+		- 특정 객체를 하나만 생성할 때 사용</p>
 	
 	<script type="text/javascript">
 	/*
