--- a/web/src/main/webapp/js/23_Array.html
+++ b/web/src/main/webapp/js/23_Array.html
@@ -77,9 +77,10 @@
 	
 	/*
 	//Array.forEach(callback(element[, index][, array])) : Array 객체를 일괄 처리하기 위한 메소드
-	// => forEach 메소드의 매개변수에 함수(콜백함수)를 전달하여 요소의 갯수만큼 자동 호출하며  
-	//함수의 매개변수로 전달받은 값을 사용하여 일괄 처리 명령 작성
-	// => 콜백함수의 매개변수에는 처리 중의 요소의 값과 첨자, Array 객체가 저장되어 콜백함수에서 사용
+	// => forEach 메소드의 매개변수에 함수(콜백함수)를 전달하여 요소의 갯수만큼 자동 호출해
+	//요소에 대한 일괄 처리 명령 작성
+	// => 콜백함수의 매개변수에는 처리 중의 요소의 값과 첨자, Array 객체가 자동 저장되어 
+	//콜백함수에서 사용 가능
 	array.forEach(function(elt, i) {
 		alert("array["+i+"] = "+elt);
 	});
