--- a/web/src/main/webapp/js/26_String.html
+++ b/web/src/main/webapp/js/26_String.html
@@ -44,9 +44,9 @@
 	//첫번째 문자값을 검색하여 두번째 문자값으로 변환하여 반환하는 메소드
 	//alert("str.replace('Hello','Hi') = "+str.replace('Hello','Hi'));//str.replace('Hello','Hi') = Hi, JavaScript!!!
 	
-	//String.toUpperCase : String 객체에 저장된 문자값을 모두 대문자로 변환하여 반환하는 메소드
+	//String.toUpperCase() : String 객체에 저장된 문자값을 모두 대문자로 변환하여 반환하는 메소드
 	//alert("str.toUpperCase() = "+str.toUpperCase());//str.toUpperCase() = HELLO, JAVASCRIPT!!!
-	//String.toLowerCase : String 객체에 저장된 문자값을 모두 소문자로 변환하여 반환하는 메소드
+	//String.toLowerCase() : String 객체에 저장된 문자값을 모두 소문자로 변환하여 반환하는 메소드
 	//alert("str.toLowerCase() = "+str.toLowerCase());//str.toLowerCase() = hello, javascript!!!
 	
 	//String.substring(from, to) : String 객체에 저장된 문자값을 매개변수로 전달받은 시작첨자
@@ -60,7 +60,7 @@
 	//String.split(pattern) : String 객체에 저장된 문자값을 매개변수로 전달받은 문자값으로
 	//구분해 분리하여 Array 객체의 요소값으로 저장해 Array 객체를 반환하는 메소드
 	//var [str1, str2]=str.split(",");//구조분해할당을 사용해 Array 객체의 요소값을 변수에 저장
-	//String.trim() : String 객체에 저장된 문자값에서 앞과 뒤에 존재하는 공백을 제거하여
+	//String.trim() : String 객체에 저장된 문자값에서 앞과 뒤에 존재하는 모든 공백을 제거하여
 	//반환하는 메소드
 	//alert("str1 ="+str1+", str2 = "+str2.trim());
 	
