--- a/web/src/main/webapp/js/30_window.html
+++ b/web/src/main/webapp/js/30_window.html
@@ -8,7 +8,7 @@
 	<h1>BOM(Browser Object Model) - window 객체</h1>
 	<hr>
 	<p>BOM : 브라우저를 기반으로 제공되는 자바스크립트 객체</p>
-	<p>window 객체 : 브라우저를 객체로 표현하여 프로퍼티와 메소드 제공하는 객체</p>
+	<p>window 객체 : 브라우저를 객체로 표현하여 프로퍼티와 메소드를 제공하는 객체</p>
 	
 	<script type="text/javascript">
 	//alert(window);//[object Window]
