--- a/web/src/main/webapp/js/32_location.html
+++ b/web/src/main/webapp/js/32_location.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>BOM(Browser Object Model) - location 객체</h1>
 	<hr>
-	<p>location 객체 : 브라우저에서 URL 주소를 입력하는 영역을 객체로 표현하여 프로퍼티와 메소드를 제공하는 객체</p>
+	<p>location 객체 : 브라우저에서 URL 주소를 입력하는 영역을 표현하여 프로퍼티와 메소드를 제공하는 객체</p>
 	
 	<script type="text/javascript">
 	//location.toString() : URL 주소를 입력하는 영역(location 객체)의 URL 주소를 반환하는 메소드
