--- a/web/src/main/webapp/js/30_window.html
+++ b/web/src/main/webapp/js/30_window.html
@@ -33,7 +33,7 @@
 	if(confirm("정말로 삭제 하시겠습니까?")) {
 		alert("게시글을 삭제 하였습니다.");
 	} else {
-		alert("게시글 삭제을 취소 하였습니다.");
+		alert("게시글 삭제를 취소 하였습니다.");
 	}
 	*/
 	
