--- a/web/src/main/webapp/js/31_navigator.html
+++ b/web/src/main/webapp/js/31_navigator.html
@@ -16,7 +16,7 @@
 	//navigator.appName : 브라우저 엔진의 이름을 저장한 프로퍼티
 	//alert("브라우저 엔진의 이름 = "+navigator.appName);
 	
-	//navigator.appName : 브라우저 엔진의 버전을 저장한 프로퍼티
+	//navigator.appVersion : 브라우저 엔진의 버전을 저장한 프로퍼티
 	//alert("브라우저 엔진의 버전 = "+navigator.appVersion);
 	
 	//navigator.userAgent : 브라우저 엔진 정보를 저장한 프로퍼티
