--- a/web/src/main/webapp/js/44_event_propagation.html
+++ b/web/src/main/webapp/js/44_event_propagation.html
@@ -23,9 +23,9 @@ div {
 	되돌아오면 이벤트 소멸</p>
 	<p>이벤트가 이동되는 과정을 캡쳐링 단계와 버블링 단계로 구분</p>
 	<p>캡쳐링(Capturing) : window 객체로부터 이벤트가 발생된 타겟 객체까지 모든	객체에 
-	이벤트가 전달되는 과정 - 이벤트가 전달된 객체에 등록된 이벤트 처리 함수 등록</p>
-	<p>버블링(Bubbling) : 이벤트가 발생된 타겟 객체부터 window 객체까지 모든 객체에 
 	이벤트가 전달되는 과정 - 이벤트가 전달된 객체에 등록된 이벤트 처리 함수 호출</p>
+	<p>버블링(Bubbling) : 이벤트가 발생된 타겟 객체부터 window 객체까지 모든 객체에 
+	이벤트가 전달되는 과정 - 이벤트가 전달된 객체에 등록된 이벤트 처리 함수 호출(기본)</p>
 	<hr>
 	<div id="red">
 		<div id="green">
