--- a/web/src/main/webapp/jquery/04_selector3.html
+++ b/web/src/main/webapp/jquery/04_selector3.html
@@ -57,25 +57,20 @@
 	//$("ul li").eq(2).css("color","red");
 	$("ul").find("li").eq(2).css("color","red");
 	
+	//$("ul li").eq(0).css("color","green");
+	//$(selector).first() : 선택자로 검색된 다수의 태그 중 첫번째 태그를 jQuery 객체로 반환하는 메소드 
+	$("ul li").first().css("color","green");
+	
+	//$("ul li").eq(4).css("color","blue");
+	//eq() 메소드의 매개변수에 [-1]를 전달하면 다수의 태그 중 마지막 태그를 검색하여 jQuery 객체로 반환
+	//$("ul li").eq(-1).css("color","blue");
+	//$(selector).last() : 선택자로 검색된 다수의 태그 중 마지막 태그를 jQuery 객체로 반환하는 메소드 
+	$("ul li").last().css("color","blue");
+	
+	//$(selector).next() : 선택자로 검색된 태그의 다음 태그를 jQuery 객체로 반환하는 메소드
+	$("ul li").first().next().css("color","aqua");
+	//$(selector).prev() : 선택자로 검색된 태그의 이전 태그를 jQuery 객체로 반환하는 메소드
+	$("ul li").last().prev().css("color","lime");
 	</script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
