--- a/web/src/main/webapp/jquery/09_text.html
+++ b/web/src/main/webapp/jquery/09_text.html
@@ -2,9 +2,57 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>jQuery</title>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
+	<h1>text 메소드와 html 메소드</h1>
+	<hr>
+	<div id="displayDiv"><p>text 메소드와 html 메소드 활용</p></div>
+	<hr>
+	<h3>jQuery 메소드 연습</h3>
+	<h3>jQuery 메소드 연습</h3>
+	<h3>jQuery 메소드 연습</h3>
+	<h3>jQuery 메소드 연습</h3>
+	<h3>jQuery 메소드 연습</h3>
+	
+	<script>
+	/*
+	//$(selector).text() : 선택자로 검색된 태그의 태그내용을 반환하는 메소드
+	// => HTML 태그를 제외한 태그내용 반환
+	//alert("태그내용 = "+$("#displayDiv").text());//태그내용 = text 메소드와 html 메소드 활용
+	
+	//$(selector).html() : 선택자로 검색된 태그의 태그내용을 반환하는 메소드
+	// => HTML 태그를 포함한 태그내용 반환
+	//alert("태그내용 = "+$("#displayDiv").html());//태그내용 = <p>text 메소드와 html 메소드 활용</p>
+	
+	//$(selector).text(value) : 선택자로 검색된 태그의 태그내용을 매개변수로 전달받은 값으로
+	//변경하는 메소드 - 매개변수로 전달받은 문자값에 HTML 태그가 존재할 경우 문자값으로 처리
+	//$("#displayDiv").text("<p style='color:red'>text() 메소드에 의해 태그내용 변경</p>");
 
+	//$(selector).text(value) : 선택자로 검색된 태그의 태그내용을 매개변수로 전달받은 값으로
+	//변경하는 메소드 - 매개변수로 전달받은 문자값에 HTML 태그가 존재할 경우 태그로 처리
+	$("#displayDiv").html("<p style='color:red'>text() 메소드에 의해 태그내용 변경</p>");
+	*/
+	
+	//묵시적 반복에 의해 검색된 모든 태그의 태그내용이 동일하게 변경
+	//$("h3").text("jQyery 메소드 연습 - 변경");
+	
+	/*
+	//each() 메소드로 명시적 반복을 사용해 검색된 모든 태그를 차례대로 제공받아 서로 다른
+	//태그내용으로 변경
+	$("h3").each(function(index) {
+		$(this).text("jQyery 메소드 연습 - "+(index+1));
+	});
+	*/$
+	
+	//$(selector).text(callback([index][, content])) 형식으로 메소드를 호출하여 명시적 반복 처리 가능
+	// => text() 메소드 또는 html() 메소드의 매개변수에 콜백함수를 전달하여 호출 가능
+	// => 매개변수에 전달되어 저장되는 콜백함수는 반드시 문자값 반환 - 반환받은 문자값으로 태그내용 변경
+	// => 콜백함수의 매개변수를 작성하여 태그의 첨자와 태그내용을 제공받아 콜백함수에서 사용 가능
+	$("h3").text(function(index, content) {
+		return content+" - "+(index+1);
+	});
+	</script>
 </body>
 </html>
