--- a/web/src/main/webapp/jquery/07_css.html
+++ b/web/src/main/webapp/jquery/07_css.html
@@ -23,15 +23,15 @@
 	<script>
 	//$(selector).css(name) : 선택자로 검색된 태그에서 매개변수로 전달받은 이름의 CSS 스타일
 	//속성값을 반환하는 메소드	
-	//alert("margin 스타일 속성값 = "+$("#displayDiv").css("margin"));//margin 스타일 속성값 = 20px	
-	//alert("padding 스타일 속성값 = "+$("#displayDiv").css("padding"));//padding 스타일 속성값 = 10px	
-	//alert("color 스타일 속성값 = "+$("#displayDiv").css("color"));//color 스타일 속성값 = rgb(255, 0, 0)
-	//alert("border 스타일 속성값 = "+$("#displayDiv").css("border"));//border 스타일 속성값 = 1px solid rgb(0, 0, 255)
-	//alert("font-size 스타일 속성값 = "+$("#displayDiv").css("font-size"));//font-size 스타일 속성값 = 24px
+	//alert("CSS 스타일 속성값 = "+$("#displayDiv").css("margin"));//CSS 스타일 속성값 = 20px	
+	//alert("CSS 스타일 속성값 = "+$("#displayDiv").css("padding"));//CSS 스타일 속성값 = 10px	
+	//alert("CSS 스타일 속성값 = "+$("#displayDiv").css("color"));//CSS 스타일 속성값 = rgb(255, 0, 0)
+	//alert("CSS 스타일 속성값 = "+$("#displayDiv").css("border"));//CSS 스타일 속성값 = 1px solid rgb(0, 0, 255)
+	//alert("CSS 스타일 속성값 = "+$("#displayDiv").css("font-size"));//CSS 스타일 속성값 = 24px
 	//CSS 스타일 속성명에 [-]가 있는 경우 자바스크립트의 카멜 표기법으로 바꾸어 표현 가능
-	//alert("font-size 스타일 속성값 = "+$("#displayDiv").css("fontSize"));//font-size 스타일 속성값 = 24px
-	//alert("text-align 스타일 속성값 = "+$("#displayDiv").css("text-align"));//text-align 스타일 속성값 = center
-	//alert("text-align 스타일 속성값 = "+$("#displayDiv").css("textAlign"));//text-align 스타일 속성값 = center
+	//alert("CSS 스타일 속성값 = "+$("#displayDiv").css("fontSize"));//CSS 스타일 속성값 = 24px
+	//alert("CSS 스타일 속성값 = "+$("#displayDiv").css("text-align"));//CSS 스타일 속성값 = center
+	//alert("CSS 스타일 속성값 = "+$("#displayDiv").css("textAlign"));//CSS 스타일 속성값 = center
 	
 	/*
 	//$(selector).css(name, value) : 선택자로 검색된 태그에서 매개변수로 전달받은 이름의 CSS 
