--- a/web/src/main/webapp/jquery/08_attr.html
+++ b/web/src/main/webapp/jquery/08_attr.html
@@ -15,8 +15,8 @@
 	<script>
 	//$(selector).attr(name) : 선택자로 검색된 태그에서 매개변수로 전달받은 이름의 태그 속성값을
 	//반환하는 메소드	 	
-	//alert("data-value 태그 속성값 = "+$("#imgDiv").attr("data-value"));//data-value 태그 속성값 = KoalaImage
-	//alert("src 태그 속성값 = "+$("#img").attr("src"));//src 태그 속성값 = /web/jquery/images/Koala.jpg
+	//alert("태그 속성값 = "+$("#imgDiv").attr("data-value"));//태그 속성값 = KoalaImage
+	//alert("태그 속성값 = "+$("#img").attr("src"));//태그 속성값 = /web/jquery/images/Koala.jpg
 	
 	/*
 	//$(selector).attr(name, value) : 태그에서 매개변수로 전달받은 이름의 태그 속성의 속성값을
