--- a/web/src/main/webapp/jquery/10_element.html
+++ b/web/src/main/webapp/jquery/10_element.html
@@ -32,19 +32,39 @@
 	$("<img src='/web/jquery/images/3.png' width='200'>").prependTo("#imageList1");
 	$("<img src='/web/jquery/images/4.png' width='200'>").prependTo("#imageList1");
 	
+	//$(selector).insertBefore(targetSelector) : 선택자로 태그를 검색하여 타겟 선택자로 검색된
+	//태그의 이전 태그로 이동하는 메소드 - 태그를 생성하여 DOM 트리로 이동
+	$("<img src='/web/jquery/images/5.png' width='200'>").insertBefore("#imageList1 img[src='/web/jquery/images/1.png']");
+
+	//$(selector).insertAfter(targetSelector) : 선택자로 태그를 검색하여 타겟 선택자로 검색된
+	//태그의 다음 태그로 이동하는 메소드 - 태그를 생성하여 DOM 트리로 이동
+	$("<img src='/web/jquery/images/6.png' width='200'>").insertAfter("#imageList1 img[src='/web/jquery/images/1.png']");
 	
+	//$(selector).append(newItem) : 매개변수로 전달받은 태그를 Element 객체로 생성하여 선택자로 
+	//검색된 태그의 첫번째 자식태그로 추가하는 메소드 - DOM 트리에 DOM 객체 추가 
+	$("#imageList2").append("<img src='/web/jquery/images/1.png' width='200'>");
+	$("#imageList2").append("<img src='/web/jquery/images/2.png' width='200'>");
+	
+	//$(selector).prepend(newItem) : 매개변수로 전달받은 태그를 Element 객체로 생성하여 선택자로 
+	//검색된 태그의 첫번째 자식태그로 추가하는 메소드 - DOM 트리에 DOM 객체 추가 
+	$("#imageList2").prepend("<img src='/web/jquery/images/3.png' width='200'>");
+	$("#imageList2").prepend("<img src='/web/jquery/images/4.png' width='200'>");
+	
+	//$(selector).before(newItem) : 매개변수로 전달받은 태그를 Element 객체로 생성하여 선택자로 
+	//검색된 태그의 이전 태그로 추가하는 메소드 - DOM 트리에 DOM 객체 추가
+	$("#imageList2 img[src='/web/jquery/images/1.png']").before("<img src='/web/jquery/images/5.png' width='200'>");
+
+	//$(selector).after(newItem) : 매개변수로 전달받은 태그를 Element 객체로 생성하여 선택자로 
+	//검색된 태그의 다음 태그로 추가하는 메소드 - DOM 트리에 DOM 객체 추가	
+	$("#imageList2 img[src='/web/jquery/images/1.png']").after("<img src='/web/jquery/images/6.png' width='200'>");
+	
+	//$(selector).remove([selector]) : 선택자로 검색된 태그를 삭제하는 메소드
+	//$("#imageList3").remove();//부모태그를 삭제하면 자식태그 삭제 처리
+	
+	//$("#imageList3").children(":eq(1)").remove();
+	//$("#imageList3").children().eq(1).remove();
+	//$("#imageList3").children().remove(":eq(1)");
+	$("#img2").remove();
 	</script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
