--- a/web/src/main/webapp/js/37_element_add.html
+++ b/web/src/main/webapp/js/37_element_add.html
@@ -27,7 +27,7 @@
 	h2E.appendChild(h2T);//<h2>h2 태그에 의해 출력되는 내용</h2>
 	
 	//document.body : HTML 문서의 body 태그를 자바스트립트 객체로 표현
-	//매개변수로 전달받은 Element 객체의 DOM Tree의 DOM 객체로 추가하여 브라우저에 태그 출력
+	//매개변수로 전달받은 Element 객체를 DOM Tree의 DOM 객체로 추가하여 브라우저에 태그 출력
 	document.body.appendChild(h2E);	
 	
 	var imgE=document.createElement("img");//<img>
