--- a/web/src/main/webapp/jquery/01_jquery.html
+++ b/web/src/main/webapp/jquery/01_jquery.html
@@ -17,8 +17,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 <script>
-//jQuery 라이브러리를 사용하기 위해서는 CSS 선택자로 DOM 트리에서 DOM 객체를 검색하여
-//jQuery 객체로 생성한 후 jQuery 객체로 메소드를 호출하여 필요한 기능 구현
+//jQuery 라이브러리를 사용하기 위해서는 jQuery 클래스 함수의 매개변수에 CSS 선택자를 전달하여
+//DOM 트리에서 DOM 객체를 검색해 jQuery 객체를 생성한 후 jQuery 객체로 메소드를 호출하여 필요한 기능 구현
 // => HTML 문서의 모든 태그가 DOM 트리에 DOM 객체로 저장되어 있어야만 jQuery 객체 생성 가능
 
 /*
@@ -31,7 +31,7 @@ window.onload=function() {
 }
 */
 
-//jQuery 객체를 생성하여 메소드를 호출하는 방법
+//jQuery 클래스 함수로 jQuery 객체를 생성하여 메소드를 호출하는 방법
 //jQuery(selector|object|tag).method(value, value, ...);
 
 /*
