--- a/web/src/main/webapp/jquery/09_text.html
+++ b/web/src/main/webapp/jquery/09_text.html
@@ -30,7 +30,7 @@
 	//변경하는 메소드 - 매개변수로 전달받은 문자값에 HTML 태그가 존재할 경우 문자값으로 처리
 	//$("#displayDiv").text("<p style='color:red'>text() 메소드에 의해 태그내용 변경</p>");
 
-	//$(selector).text(value) : 선택자로 검색된 태그의 태그내용을 매개변수로 전달받은 값으로
+	//$(selector).html(value) : 선택자로 검색된 태그의 태그내용을 매개변수로 전달받은 값으로
 	//변경하는 메소드 - 매개변수로 전달받은 문자값에 HTML 태그가 존재할 경우 태그로 처리
 	$("#displayDiv").html("<p style='color:red'>text() 메소드에 의해 태그내용 변경</p>");
 	*/
@@ -49,7 +49,7 @@
 	//$(selector).text(callback([index][, content])) 형식으로 메소드를 호출하여 명시적 반복 처리 가능
 	// => text() 메소드 또는 html() 메소드의 매개변수에 콜백함수를 전달하여 호출 가능
 	// => 매개변수에 전달되어 저장되는 콜백함수는 반드시 문자값 반환 - 반환받은 문자값으로 태그내용 변경
-	// => 콜백함수의 매개변수를 작성하여 태그의 첨자와 태그내용을 제공받아 콜백함수에서 사용 가능
+	// => 콜백함수에 매개변수를 작성하여 태그의 첨자와 태그내용을 제공받아 콜백함수에서 사용 가능
 	$("h3").text(function(index, content) {
 		return content+" - "+(index+1);
 	});
