--- a/web/src/main/webapp/jquery/06_each.html
+++ b/web/src/main/webapp/jquery/06_each.html
@@ -46,8 +46,8 @@
 	$("h3").each(function(index, element) {
 		//$("h3").eq(index).css("color", color[index]);
 		
-		//jQuery 함수의 매개변수에 선택자 대신 Element 객체를 전달받아 jQuery 객체로 생성하여
-		//메소드 호출 가능 
+		//jQuery 클래스 함수의 매개변수에 선택자 대신 Element 객체를 전달받아 jQuery 객체로 
+		//생성하여 메소드 호출 가능 
 		//$(element).css("color", color[index]);
 		
 		//this : 콜백함수에 처리중인 태그의 Element 객체를 표현하기 위한 키워드
