--- a/web/src/main/webapp/jquery/20_submit_event.html
+++ b/web/src/main/webapp/jquery/20_submit_event.html
@@ -119,6 +119,24 @@ legend {
 		//동작되지 않도록 실행
 		return result;
 	});	
+	
+	
+	$("#id").blur(function() {
+		
+	});	
 	</script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
