--- a/web/src/main/webapp/jquery/21_form_event.html
+++ b/web/src/main/webapp/jquery/21_form_event.html
@@ -109,7 +109,7 @@ legend {
 		}
 		
 		//result 변수에 [false]가 저장된 경우 검증이 실패 하였으므로 이벤트 처리 함수 종료
-		// => 제출 이벤트가 발생되지 않아 form 미동작
+		// => 제출 이벤트가 발생되지 않아 form 태그 미동작
 		if(!result) return;
 		
 		//result 변수에 [true]가 저장된 경우 검증이 성공 하였으므로 제출 이벤트 발생
