--- a/web/src/main/webapp/jquery/20_submit_event.html
+++ b/web/src/main/webapp/jquery/20_submit_event.html
@@ -76,9 +76,9 @@ legend {
 	
 	//$(selector).submit(callback) : 선택자로 검색된 태그(form 태그)에서 제출 이벤트(Submit Event)가 
 	//발생될 경우 콜백함수(이벤트 처리 함수)를 호출하는 메소드
-	// => [회원가입] 버튼을 클릭한 경우 제출 이벤트 발생
-	// => form 태그에서 제출 이벤트가 발생될 경우 이벤트 처리 함수에서는 입력태그의 입력값을  
-	//검증하고 검증이 실패된 경우 제출 이벤트를 취소해 form 태그가 동작되지 않도록 명령 작성 
+	//[회원가입] 버튼을 클릭한 경우 제출 이벤트 발생
+	// => 이벤트 처리 함수에서는 입력태그의 입력값을 검증하고 검증이 실패된 경우 제출 이벤트를 
+	//취소해 form 태그가 동작되지 않도록 명령 작성 
 	$("#joinForm").submit(function() {
 		//에러 메소드를 출력하는 모든 태그의 태그내용을 초기화 처리
 		$(".error").text("");
