--- a/web/src/main/webapp/jquery/22_checkbox_event.html
+++ b/web/src/main/webapp/jquery/22_checkbox_event.html
@@ -73,7 +73,7 @@ h3 {
 			check=1;
 			//$(selector).removeAttr(name) : 선택자로 검색된 태그에서 매개변수로 전달받은 이름의
 			//태그 속성을 삭제하는 메소드
-			$("#btn").removeAttr("disabled");
+			$("#btn").removeAttr("disabled");//태그를 활성화 처리
 		} else {
 			check=0;
 			$("#btn").attr("disabled","disabled");
